--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,13 +10,13 @@ a:focus-visible{
     background-color: yellow;
 }
 
-body{
+body {
     color:#000000;              
     background-color:#735449;      
     font-size: 1.25em;
     font-family: "Helvetica", "Arial", sans-serif;
     margin:0em;
-    width: 375.0px;
+    width: 100%;
 }
 
 header {
@@ -28,6 +28,8 @@ header {
     flex-basis: auto;
     background-color:#B36446;
     text-decoration:none;
+    padding-top:0.5em;
+    Padding-bottom:0.5em;
 }
 
 header img{
@@ -35,13 +37,15 @@ header img{
     margin-left: auto;
     margin-right: auto;
     width:40%;
-
 }
 
 nav{
     background-color:#B36446;
-    padding: 0.5em;
+    padding-top: 0.5em;
+    padding-bottom:0.5em;
     width: 100%;
+    position:fixed;
+    bottom:0;
 }
 
 nav ul{
@@ -57,9 +61,18 @@ nav ul{
 
 nav img{
     display:block;
-    width: 50%;
+    width: 4em;
 }
 
-nav a{
-    width:0;
+.proceslijn{
+background-image: url(images/proceslijn.png);
+background-repeat: no-repeat;
+background-size: contain;
+background-position: center;
+height:68vh;
+margin-top:0.5em;
+}
+
+.shirt{
+    width:8em;
 }
