--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,7 +96,7 @@ margin-top:0.5em;
 }
 
 .proceslijn h1{
-    margin:0.5em 0em 0em 0.5em;
+    margin:0em 0em 0em 0.5em;
 }
 
 .flexboxshirt img{
@@ -173,7 +173,7 @@ margin-top:0.5em;
     display:flex;
     justify-content: left;
     flex-direction: column;
-    margin: 1.7em 1.9em;
+    margin: 1.7em 1.7em;
     width:65%;
     flex-wrap: wrap;    
 }
@@ -184,5 +184,63 @@ margin-top:0.5em;
     background-repeat: no-repeat;
     background-size: contain;
     width:40em;
-    
+}
+
+.reparatie{
+    display:flex;
+    margin-right:0.5em;
+    margin-top:1.7em;
+    margin-left:0.5em;
+}
+
+.reparatietekst{
+    display:flex;
+    justify-content: left;
+    flex-direction: column;
+    margin: 1.7em 1.7em;
+    flex-wrap: wrap;    
+}
+
+.reparatie .patch{
+    margin:0em 1.8em 0em 0em;
+    background-image: url(images/patch.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width:55%;
+}
+
+.reparatie{
+    display:flex;
+}
+
+.reparatie img{
+    width:5.5em;
+}
+
+.eindproduct{
+    display:flex;
+    margin-right:0.5em;
+    margin-top:1.8em;
+    margin-left:2.7em;
+}
+
+.eindproduct img{
+    width:4em;
+}
+
+.eindproducttekst{
+    display:flex;
+    justify-content: left;
+    flex-direction: column;
+    margin: 1.7em 1.7em;
+    width:65%;
+    flex-wrap: wrap;    
+}
+
+.eindproduct .patch{
+    margin:0em 0em 0em 2em;
+    background-image: url(images/patch.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width:40em;
 }
